add employee leave post
