# src/constants/errorTypes.ts
@@ -20,7 +20,8 @@ export const E_ERROR = {
   VALIDATION_ERROR         : { message: 'E_VALIDATION_ERROR', status: HTTP_CODE.BAD_REQUEST },
   USER_NOT_FOUND           : { message: 'User not found', status: HTTP_CODE.NO_CONTENT },
   USER_IS_NOT_AUTHORIZED   : { message: 'User is not authorized', status: HTTP_CODE.UNAUTHORIZED },
-  TOKEN_EXPIRED            : { message: 'Token expired', status: HTTP_CODE.UNAUTHORIZED }
+  TOKEN_EXPIRED            : { message: 'Token expired', status: HTTP_CODE.UNAUTHORIZED },
+  INSUFFICIENT_LEAVE_AMOUNT: { message: 'Employee does not have enough available leave', status: HTTP_CODE.BAD_REQUEST }
 } as const
 
 export type ErrorKeys = keyof typeof E_ERROR
