# tsoa/swagger.json
@@ -42,6 +42,62 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"EmployeeAddLeaveRequestBody": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"leave_type_id": {
+						"type": "string"
+					},
+					"start_date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"duration": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"leave_type_id",
+					"start_date",
+					"duration"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"EmployeeCreateRequestBody": {
+				"properties": {
+					"noInduk": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"birth_date": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"phone_number": {
+						"type": "string"
+					},
+					"employement_date": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"noInduk",
+					"name",
+					"birth_date",
+					"phone_number",
+					"employement_date"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"EmployeeUpdateRequestBody": {
 				"properties": {
 					"noInduk": {
@@ -166,6 +222,105 @@
 					}
 				],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateEmployee",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/EmployeeCreateRequestBody"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/employee/leave-stats/{id}": {
+			"get": {
+				"operationId": "GetEmployeLeaveStats",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/employee/add-leave": {
+			"post": {
+				"operationId": "AddLeave",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/EmployeeAddLeaveRequestBody"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/api/employee/{id}": {
@@ -209,6 +364,37 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteEmployee",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Employee"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/roles": {
